Ensure dark mode plan labels use button text color

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -1205,6 +1205,7 @@
             }
 
             .cs-package {
+                color: var(--buttonText);
                 background-color: var(--darkSecondaryAccent);
 
                 &:before {
